components/oauth2-proxy/gateway-oauth-bookinfo.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: oauth-bookinfo
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
      - oauth-bookinfo-istio-ingress.apps.cluster-xp6rn.dynamic.redhatworkshops.io
    tls:
      mode: SIMPLE
      credentialName: oauth-bookinfo-cert
...
