components/oauth2-proxy/route-oauth-bookinfo.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: oauth-bookinfo
  namespace: istio-ingress
spec:
  host: oauth-bookinfo-istio-ingress.apps.cluster-xp6rn.dynamic.redhatworkshops.io
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
...
