components/oauth2-proxy/virtualservice-oauth-bookinfo.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauth-bookinfo
spec:
  gateways:
  - istio-ingress/oauth-bookinfo
  hosts:
  - oauth-bookinfo-istio-ingress.apps.cluster-xp6rn.dynamic.redhatworkshops.io
  http:
  - match:
    - uri:
        exact: "/"
    rewrite:
      uri: /productpage
    route:
    - destination:
        host: oauth2-proxy.oauth2-proxy.svc.cluster.local
        port:
          number: 80
  - route:
    - destination:
        host: oauth2-proxy.oauth2-proxy.svc.cluster.local
        port:
          number: 80
...
